# Job_scraper

./: CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  run_scraper.bat
scrapers/: base.py  glassdoor.py  indeed.py  linkedin.py  naukri.py  scraper_registry.py
utils/: concurrency_config.py  date_parser.py  email_extractor.py  exceptions.py  exporter.py  keyword_matcher.py  logger.py  parallel.py  stealth.py  text_parser.py
