[project]
name = "job-scraper"
version = "0.1.0"
description = "SRE Job Scraper"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright",
    "pandas",
    "beautifulsoup4",
    "lxml",
    "selenium",
    "undetected-chromedriver",
    "setuptools",  # Provides distutils for Python 3.13+
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "utils"]
