[project]
name = "job-scraper"
version = "0.2.0"
description = "Modular Multi-Platform Job Scraper with Concurrent Processing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright",
    "pandas",
    "beautifulsoup4",
    "lxml",
    "selenium",
    "undetected-chromedriver",
    "python-dateutil",
    "setuptools",  # Provides distutils for Python 3.13+
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "utils"]
